--- a/app/views/team/index.html.erb
+++ b/app/views/team/index.html.erb
@@ -1,5 +1,18 @@
+<div class="row mb-5">
+  <div class="col">
+    <%= link_to 'User Control Panel', control_panel_path %>
+  </div>
+
+  <div class="col text-right">
+    <% if user_signed_in? %>
+      <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+    <% else %>
+      <%= link_to 'Sign in/Create Account', new_user_session_path %>
+    <% end %>
+  </div>
+</div>
+
 <div class="row">
-    <h1 class="time display-1 mx-auto text-muted" id="time">00:00</h1>
 </div>
 
 <div class="row">
@@ -9,7 +22,7 @@
         <%= gravatar_image_tag(u.email, filetype: 'png', gravatar: { size: 200 }) %>
       </div>
       <p class="user-name lead">
-        <%= u.name.humanize %>
+        <%= u.friendly_name %>
       </p>
       <p class="user-status lead">
         <%= u.status_message %>
