--- a/app/views/team/index.html.erb
+++ b/app/views/team/index.html.erb
@@ -1,34 +1,29 @@
-<div class="row mb-5">
-  <div class="col">
-    <% if user_signed_in? %>
-      <%= link_to 'User Control Panel', control_panel_path %>
-    <% end %>
-  </div>
+<ul class="nav my-0 py-4 mb-3">
+  <a id="btn-available" class="btn-status btn-available <%= 'btn-status-active' if current_user.available? %>" href="#"></a>
+  <a id="btn-busy"      class="btn-status btn-busy <%= 'btn-status-active' if current_user.busy? %>"           href="#"></a>
+  <a id="btn-dnd"       class="btn-status btn-dnd <%= 'btn-status-active' if current_user.dnd? %>"             href="#"></a>
+  <a id="btn-away"      class="btn-status btn-away <%= 'btn-status-active' if current_user.away? %>"           href="#"></a>
+  <% if user_signed_in? %>
+    <%= link_to 'User Control Panel', control_panel_path, class: 'nav-link btn bg-inverse text-white ml-auto' %>
+    <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link btn text-muted' %>
+  <% else %>
+    <%= link_to 'Sign in/Create Account', new_user_session_path, class: 'nav-link active' %>
+  <% end %>
+</ul>
 
-  <div class="col text-right">
-    <% if user_signed_in? %>
-      <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
-    <% else %>
-      <%= link_to 'Sign in/Create Account', new_user_session_path %>
-    <% end %>
-  </div>
-</div>
-
-<div class="row">
-</div>
-
-<div class="row">
+<div class="row mt-5">
   <% @users.each do |u| %>
-    <div class="col user user-status-<%= u.status %>">
-      <div class="user-image">
-        <%= gravatar_image_tag(u.email, filetype: 'png', gravatar: { size: 200 }) %>
+    <div class="col">
+      <div id="user-<%= u.id %>" class="card user user-status-<%= u.status %> mx-auto">
+        <div class="user-image" style="background: url(<%= gravatar_image_url(u.email, filetype: 'png', size: 200) %>)">
+        </div>
+        <p class="user-status py-2 card-text">
+          <%= u.friendly_status_message %>
+        </p>
+        <p class="user-name lead">
+          <%= u.friendly_name %>
+        </p>
       </div>
-      <p class="user-name lead">
-        <%= u.friendly_name %>
-      </p>
-      <p class="user-status lead">
-        <%= u.status_message %>
-      </p>
     </div>
   <% end %>
 </div>
